# SFML-Wordle

./: CMakeLists.txt  DrawBoard.cpp  DrawBoard.h  Input.cpp  Input.h  LetterBank.cpp  LetterBank.h  README.md  Square.cpp  Square.h  Word.cpp  Word.h  WordBank.cpp  WordBank.h  Wordle.cpp  Wordle.h  board.cpp  board.h  classWordle.cpp  classWordle.h  main.cpp
